kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: e-commerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        namespace: e-commerce
    spec:
      containers:
      - name: frontend
        image: shantaveerkhyalap/project_1-frontend:v1.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80  
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:    
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
