kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: e-commerce
spec:
  selector:
    app: backend
  ports:
  - port: 8006
    targetPort: 8006
