kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: e-commerce
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80

#Service port → client-facing port
#targetPort → containerPort inside pod
